--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="/The-first-layout/main.css">
     <title>Модуль 3.1. Верстка макета</title>
 </head>
 
@@ -13,7 +13,7 @@
         <div class="header__wrapper">
             <div class="header__left-part header--margins">
                 <button class="menu header--button--pink"></button>
-                <a class="logo header__logo" href="/"><img class="logo__img" src="/img/logo.svg" alt="Логотип"></a>
+                <a class="logo header__logo" href="/"><img class="logo__img" src="/The-first-layout/img/logo.svg" alt="Логотип"></a>
             </div>
             <div class="header__tablet header__tablet--margins">
                 <div class="header__middle-part header--hidden header--margins">
@@ -67,7 +67,7 @@
                     обращаются по рекомендациям и, в свою очередь, советуют нас родным и близким.</p>
                 <button class="read-more-button read-more-button--arrows--green">Читать далее</button>
             </div>
-            <img class="image picture-block__image" src="/img/main_pic.jpeg" alt="Логотип компании">
+            <img class="image picture-block__image" src="/The-first-layout/img/main_pic.jpeg" alt="Логотип компании">
         </div>
     </main>
 </body>
