--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 <body class="page">
     <header class="header">
         <div class="header__wrapper">
-            <div class="header__left-part header--margins">
-                <button class="menu header--button--pink"></button>
+            <div class="header__left-part header__left-part--margins">
+                <button class="header__menu header__button header__button--pink"></button>
                 <a class="logo header__logo" href="/"><img class="logo__img" src="/The-first-layout/img/logo.svg" alt="Логотип"></a>
             </div>
-            <div class="header__tablet header__tablet--margins">
-                <div class="header__middle-part header--hidden header--margins">
-                    <a class="phone header--button--pink"></a>
-                    <a class="message header--button--pink"></a>
-                    <a class="personal header--button--pink"></a>
+            <div class="header__tablet">
+                <div class="header__middle-part header__middle-part--hidden header__middle-part--margins">
+                    <a class="header__phone header__button header__button--pink"></a>
+                    <a class="header__message header__button header__button--pink"></a>
+                    <a class="header__personal header__button header__button--pink"></a>
                 </div>
-                <div class="header__right-part header--margins">
-                    <a class="support header--button--pink"></a>
-                    <a class="search header--button--pink"></a>
+                <div class="header__right-part header__right-part--margins">
+                    <a class="header__support header__button header__button--pink"></a>
+                    <a class="header__search header__button header__button--pink"></a>
                 </div>
             </div>
         </div>
@@ -34,15 +34,14 @@
                 <h1 class="main__title main__title--mobile">Услуги и сервисы</h1>
                 <div class="button-block main__button-block">
                     <div class="button-block__item">
-                        <span class="name">Оставить заявку</span>
-                        <button class="support header--button--pink"></button>
+                        <span class="button-block__name">Оставить заявку</span>
+                        <button class="button-block__support  button-block__button button-block__button--pink"></button>
                     </div>
                     <div class="button-block__item">
-                        <span class="name">Статус ремонта</span>
-                        <button class="search header--button--pink"></button>
+                        <span class="button-block__name">Статус ремонта</span>
+                        <button class="button-block__search  button-block__button button-block__button--pink"></button>
                     </div>
                 </div>
-
             </div>
             <ul class="service-list main__service-list">
                 <li class="service-list__item service-list__item--active">Ремонтируемые устройства</li>
