--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
             </div>
             <div class="header__tablet">
                 <div class="header__middle-part header__middle-part--hidden header__middle-part--margins">
-                    <a class="header__phone header__button header__button--pink"></a>
-                    <a class="header__message header__button header__button--pink"></a>
-                    <a class="header__personal header__button header__button--pink"></a>
+                    <a class="phone header__button header__button--pink"></a>
+                    <a class="message header__button header__button--pink"></a>
+                    <a class="personal header__button header__button--pink"></a>
                 </div>
                 <div class="header__right-part header__right-part--margins">
-                    <a class="header__support header__button header__button--pink"></a>
-                    <a class="header__search header__button header__button--pink"></a>
+                    <a class="support header__button header__button--pink"></a>
+                    <a class="search header__button header__button--pink"></a>
                 </div>
             </div>
         </div>
@@ -35,11 +35,11 @@
                 <div class="button-block main__button-block">
                     <div class="button-block__item">
                         <span class="button-block__name">Оставить заявку</span>
-                        <button class="button-block__support  button-block__button button-block__button--pink"></button>
+                        <button class="support  button-block__button button-block__button--pink"></button>
                     </div>
                     <div class="button-block__item">
                         <span class="button-block__name">Статус ремонта</span>
-                        <button class="button-block__search  button-block__button button-block__button--pink"></button>
+                        <button class="search  button-block__button button-block__button--pink"></button>
                     </div>
                 </div>
             </div>
