--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="header">
         <div class="header__wrapper">
             <div class="header__left-part header__left-part--margins">
-                <button class="header__menu header__button header__button--pink"></button>
+                <button class="menu header__button header__button--pink"></button>
                 <a class="logo header__logo" href="/"><img class="logo__img" src="/The-first-layout/img/logo.svg" alt="Логотип"></a>
             </div>
             <div class="header__tablet">
