--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <p class="text__item text__item--hidden">Мы успешно работаем с 1992 года и заслужили репутацию надежного
                     партнера, что подтверждает большое количество постоянных клиентов. Мы гордимся тем, что к нам
                     обращаются по рекомендациям и, в свою очередь, советуют нас родным и близким.</p>
-                <button class="read-more-button read-more-button--arrows--green">Читать далее</button>
+                <button class="read-more-button">Читать далее</button>
             </div>
             <img class="image picture-block__image" src="/The-first-layout/img/main_pic.jpeg" alt="Логотип компании">
         </div>
