--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 <body class="page">
     <header class="header">
         <div class="header__wrapper">
-            <div class="header__left-part header__left-part--margins">
+            <div class="header__left-part">
                 <button class="menu header__button header__button--pink"></button>
                 <a class="logo header__logo" href="/"><img class="logo__img" src="/The-first-layout/img/logo.svg" alt="Логотип"></a>
             </div>
             <div class="header__tablet">
-                <div class="header__middle-part header__middle-part--hidden header__middle-part--margins">
+                <div class="header__middle-part header__middle-part--hidden">
                     <a class="phone header__button header__button--pink"></a>
                     <a class="message header__button header__button--pink"></a>
                     <a class="personal header__button header__button--pink"></a>
                 </div>
-                <div class="header__right-part header__right-part--margins">
+                <div class="header__right-part">
                     <a class="support header__button header__button--pink"></a>
                     <a class="search header__button header__button--pink"></a>
                 </div>
@@ -31,7 +31,7 @@
     <main class="main">
         <div class="main__wrapper">
             <div class="main__title-block">
-                <h1 class="main__title main__title--mobile">Услуги и сервисы</h1>
+                <h1 class="main__title">Услуги и сервисы</h1>
                 <div class="button-block main__button-block">
                     <div class="button-block__item">
                         <span class="button-block__name">Оставить заявку</span>
