--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <a class="logo header__logo" href="/"><img class="logo__img" src="/The-first-layout/img/logo.svg" alt="Логотип"></a>
             </div>
             <div class="header__tablet">
-                <div class="header__middle-part header__middle-part--hidden">
+                <div class="header__middle-part">
                     <a class="phone header__button header__button--pink"></a>
                     <a class="message header__button header__button--pink"></a>
                     <a class="personal header__button header__button--pink"></a>
