--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
     <header class="header">
         <div class="header__wrapper">
             <div class="header__left-part">
-                <button class="menu header__button header__button--pink"></button>
+                <button class="menu header__button"></button>
                 <a class="logo header__logo" href="/"><img class="logo__img" src="/The-first-layout/img/logo.svg" alt="Логотип"></a>
             </div>
             <div class="header__tablet">
                 <div class="header__middle-part">
-                    <a class="phone header__button header__button--pink"></a>
-                    <a class="message header__button header__button--pink"></a>
-                    <a class="personal header__button header__button--pink"></a>
+                    <a class="phone header__button"></a>
+                    <a class="message header__button"></a>
+                    <a class="personal header__button"></a>
                 </div>
                 <div class="header__right-part">
-                    <a class="support header__button header__button--pink"></a>
-                    <a class="search header__button header__button--pink"></a>
+                    <a class="support header__button"></a>
+                    <a class="search header__button"></a>
                 </div>
             </div>
         </div>
@@ -35,11 +35,11 @@
                 <div class="button-block main__button-block">
                     <div class="button-block__item">
                         <span class="button-block__name">Оставить заявку</span>
-                        <button class="support  button-block__button button-block__button--pink"></button>
+                        <button class="support  button-block__button"></button>
                     </div>
                     <div class="button-block__item">
                         <span class="button-block__name">Статус ремонта</span>
-                        <button class="search  button-block__button button-block__button--pink"></button>
+                        <button class="search  button-block__button"></button>
                     </div>
                 </div>
             </div>
