--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             Мы гордимся тем, что к нам обращаются по рекомендациям и, в свою
             очередь, советуют нас родным и близким.
           </p>
-          <button class="read-more-button">Читать далее</button>
+          <button class="main__read-more-button">Читать далее</button>
         </div>
         <img
           class="main__picture-block-img"
